# invoke-aws-lambda-rs

./: Cargo.toml  README.md  action.yml
.github/workflows/: release.yml
src/: main.rs
