[package]
name = "invoke-aws-lambda-rs"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "invoke-aws-lambda-rs"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-types = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
aws-smithy-types = "1"
base64 = "0.22"
